[package]
name = "myfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"  
quote = "1.0"
syn = "1.0"
once_cell = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic="abort"  

[profile.dev]
panic="abort"